--- a/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
+++ b/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
@@ -153,6 +153,12 @@
     <ClInclude Include="RegisterCenter.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Center.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="classA.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -183,6 +189,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Channel.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Center.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="classA.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
